# hot-drone

./: README.md
3d print files/: HOT drone Bambu Studio.3mf  camera_damper_bracket_cantilever - left - 20250804.stl  damper_top - 20250804.stl
3d print files/STEP/: camera_damper_bracket_cantilever - right - 20250804.step  damper_bottom - 20250804.step
3d print files/STL/: camera_damper_bracket_cantilever - right - 20250804.stl
software/camera-computer/: README.md  push.sh
software/camera-computer/home/: c.py  led_monitor.py  mavlink_record.py  usb_rx.py
software/camera-computer/home/.config/systemd/user/: camera-capture-0.service  camera-capture-1.service  camera-fc-time.service  camera-led-monitor.service  camera-sensors.service
software/firmware/data-logger-rs/: Cargo.toml  README.md
software/firmware/data-logger-rs/src/: main.rs
software/post-processing/: README.md  log_extract.py
software/post-processing/lib/: dng.py  flight_log.py  metadata.py  path.py  raw.py  time_map.py
vehicles/x500v2/: README.md  params.txt
vehicles/x500v2/3d print files/STEP/: camera holder IMX477 - 20250804.step  camera_damper_bracket_cantilever - left - 20250804.step  damper_top - 20250804.step  skid retrofit - skid - 20250811.step
vehicles/x500v2/3d print files/STL/: camera holder IMX477 - 20250804.stl  skid retrofit - skid - 20250811.stl
