[package]
name = "data-logger-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-embedded-hal = { version = "0.3", features = ["defmt"] }
embassy-sync = { version = "0.6", features = ["defmt"] }
embassy-executor = { version = "0.7", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.4", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-usb = { version = "0.4", features = ["defmt"] }
# embassy-net = { version = "0.7.0", features = ["defmt", "icmp", "tcp", "udp", "raw", "dhcpv4", "medium-ethernet", "dns", "proto-ipv4", "proto-ipv6", "multicast"] }
# embassy-net-wiznet = { version = "0.2.0", path = "../../embassy-net-wiznet", features = ["defmt"] }
embassy-futures = { version = "0.1" }
embassy-usb-logger = { version = "0.4" }
# cyw43 = { version = "0.3.0", path = "../../cyw43", features = ["defmt", "firmware-logs"] }
# cyw43-pio = { version = "0.4.0", path = "../../cyw43-pio", features = ["defmt"] }

defmt = "0.3"
defmt-rtt = { version = "0.4", optional = true }
defmt-serial = { version = "0.10", optional = true }
fixed = "1.23.1"
fixed-macro = "1.2"

#cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
critical-section = "1.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = "0.8"

embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io-async = { version = "0.6", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"
rand = { version = "0.8.5", default-features = false }

bmp390 = { path = "../drivers/bmp390" }
icm20948-async = { path = "../drivers/icm20948-async" }
# thingbuf = { version = "0.1", default-features = false }

# uom = { version = "0.36", default-features = false, features = [
#     "f32",
#     "si",
#     "autoconvert",
# ] }

nalgebra = { version = ">0.30.0", default-features = false, features = [
    "libm",
] }

[features]
default = ["defmt-serial"]

[profile.release]
lto = true
opt-level = "s"
incremental = false
codegen-units = 1
debug = true

[profile.dev]
debug = 2
lto = true
opt-level = "z"
